--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,3 @@
-ul li img {
-  width: 200px
-}
-
-img{
-  margin-left: 5%;
-  width: 35%;
-}
 .carousel-indicators {
   display: none;
 }
@@ -20,19 +12,22 @@ img{
   color: black;
 }
 
-.carousel-caption > h1 {
+.carousel-caption h1 {
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
+  font-size: 3vmax;
 }
 
-.carousel-caption > h2 {
+.carousel-caption h2 {
   font-weight: 900;
   margin-top: 30px;
   margin-bottom: 30px;
+  font-size: 2.8vmax;
 }
 
-.carousel-caption > h3, h4 {
+.carousel-caption h4 {
   font-weight: 400;
+  font-size: 1.5vmax;
 }
 
 .modal {
@@ -41,4 +36,29 @@ img{
 
 .modal-footer {
   text-align: center;
+}
+
+.navbar {
+  margin-bottom: 0;
+}
+
+img{
+  margin-left: 5vw;
+  max-height: 90vh;
+}
+
+@media (max-width: 768px) {
+  img {
+    max-height: 70vh;
+  }
+  .carousel-caption {
+    left: 0%;
+    right: 0%;
+  }
+  .carousel-caption h1 {
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+    border-radius: 5px;
+  }
 }
