--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,9 @@
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+
+body {
+  font-family: 'cwTeXHei', Noto, sans-serif;
+}
+
 .carousel-indicators {
   display: none;
 }
