--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,8 @@
 @import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 
 body {
-  font-family: 'cwTeXHei', Noto, sans-serif;
+  font-family: Noto Sans, 'cwTeXHei', Noto, sans, sans-serif;
 }
 
 .carousel-indicators {
@@ -9,13 +10,16 @@ body {
 }
 
 .carousel-caption {
+  padding-left: 5%;
   right: 10%;
-  left: 45%;
+  left: 40%;
   text-align: left;
   top: 10%;
   bottom: 5%;
   text-shadow: 0 0 0 rgba(0, 0, 0, 0);
   color: black;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 3px;
 }
 
 .carousel-caption h1 {
@@ -61,12 +65,13 @@ img{
   .carousel-caption {
     left: 0%;
     right: 0%;
+    background-color: transparent;
   }
   .carousel-caption h1 {
     right: 0;
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 5px;
-    border-radius: 5px;
+    padding: 10px;
+    border-radius: 3px;
   }
   .modal {
     top: 5%;
