--- a/css/custom.css
+++ b/css/custom.css
@@ -9,25 +9,23 @@ body {
 }
 
 .carousel-caption {
-  padding-left: 5%;
+  padding: 0;
+  padding-left: 3%;
   right: 10%;
   left: 40%;
   text-align: left;
-  top: 10%;
+  top: 0;
   bottom: 5%;
   text-shadow: 0 0 0 rgba(0, 0, 0, 0);
   color: black;
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 3px;
+  overflow: scroll;
 }
 
 .carousel-caption h1 {
-  position: absolute;
-  bottom: 0;
+  font-weight: 900;
   font-size: 3vmax;
-  background-color: rgba(255, 255, 255, 0.7);
-  padding: 10px;
-  border-radius: 3px;
 }
 
 .carousel-caption h2 {
@@ -70,7 +68,12 @@ img{
     background-color: transparent;
   }
   .carousel-caption h1 {
+    position: absolute;
     right: 0;
+    bottom: 0;
+    padding: 10px;
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, 0.7);
   }
   .modal {
     top: 5%;
