--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,27 @@ body {
   font-family: "Microsoft JhengHei", 'cwTeXHei', sans, sans-serif;
 }
 
+#loadingDiv {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  text-align: center;
+  font-family: sans;
+}
+
+#loadingDiv img {
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+  top: -4em;
+  z-index: -1;
+}
+
+#content {
+  opacity: 0;
+}
+
 #element::-webkit-scrollbar { 
     display: none; 
 }
